--- a/bingo_caller.html
+++ b/bingo_caller.html
@@ -219,24 +219,24 @@ img.mini_logo {
 }
 
 .sphere {
-  height: 80%;
-  width: 90%;
+  height: 75%;
+  width: 50%;
   border-radius: 50%;
   /* text-align: center; */
   /*vertical-align: middle; */
   position: relative;
   box-shadow: inset -10px -10px 100px #000, 10px 10px 20px black, inset 0px 0px 10px black;
   display: inline-block;
-  margin: 5%;
+  margin-left: 25%;
 }
 .ball_text {
   height: 100%;
   width: 100%;
-  margin-top: 2%;
+  margin-top: 10%;
   vertical-align: center;
   text-align: center;
   color: black;
-  font-size: 500px;
+  font-size: 400px;
   font-family: Trebuchet, Arial, sans-serif;
   font-weight: bold;
 }
